--- a/template.html
+++ b/template.html
@@ -63,11 +63,6 @@
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
-    /* --- ANIMAZIONE BARRA --- */
-    #progress-bar {
-      transition: width 0.5s ease-in-out, background 0.5s ease-in-out;
-    }
   </style>
 </head>
 <body>
@@ -97,8 +92,9 @@
     <div><strong>Punteggio:</strong> <span id="punteggio">0</span></div>
     <div><strong>Domanda:</strong> <span id="contatore">0</span></div>
   </div>
+  <!-- Progress bar nascosta inizialmente -->
   <div class="progress-container" id="progress-container" style="display:none; background-color: #444; border-radius: 30px; margin-bottom: 20px; overflow: hidden;">
-    <div id="progress-bar" style="width: 0%; height: 14px; background: linear-gradient(to right, #ff416c, #ff4b2b);"></div>
+    <div id="progress-bar" style="width: 0%; height: 14px; background: linear-gradient(to right, #ff416c, #ff4b2b); transition: width 0.4s;"></div>
   </div>
   <div class="card" id="card-container" style="display:none;">
     <div id="domanda" style="font-size: 1.4em; font-weight: bold; border: 2px solid #007bff; padding: 20px; border-radius: 10px; background-color: #2a2e3d; color: white; margin-bottom: 20px;">Caricamento...</div>
@@ -230,8 +226,8 @@
 
       aggiornaPunteggio();
 
-      // Avanza automaticamente dopo 0,5 secondi
-      setTimeout(() => { prossimaDomanda(); }, 500);
+      // Avanza automaticamente dopo 0,2 secondi
+      setTimeout(() => { prossimaDomanda(); }, 200);
     }
 
     function prossimaDomanda() { indexDomanda++; caricaDomanda(); }
